# eliotheinrich.github.io

./: _config.yml  index.html
ProjectSource/: CMakeLists.txt
ProjectSource/main/: dla.js  xymodel.js  xymodel.wasm
ProjectSource/src/: dla.cpp
ProjectSource/src/DLA/: DLALightningModel.hpp  DiffusionController.hpp  DiffusivePhysicsModel.hpp  QuadCollection.hpp
ProjectSource/src/MonteCarlo/: MonteCarlo.cpp
ProjectSource/src/MonteCarlo/Ising/: SquareIsingModel.cpp
ProjectSource/src/MonteCarlo/Spin2d/: SquareXYModel.cpp
_data/: navigation.yml
_includes/head/: custom.html
_layouts/: home.html
about-me/: about-me.md
assets/js/: dla.js  dla.wasm  main.wasm  qrpm.wasm  xymodel.wasm
projects/: projects.md
projects/dla/: index.md
projects/mipt/: index.md
projects/qrpm/: index.md
projects/qutils/: index.md
projects/xy-model/: index.md
publications/: publications.md
resume/: resume.md
src/: CMakeLists.txt
src/main/: dla.wasm  index.html  qrpm.js  xymodel.wasm
src/src/: QuadCollection.hpp  Simulator.hpp  Support.hpp  qrpm.cpp  webgl.hpp  xymodel.cpp
src/src/DLA/: DiffusionController.hpp  DiffusionPhysicsModel.hpp  main.cpp
src/src/MonteCarlo/: MonteCarlo.hpp
src/src/MonteCarlo/Ising/: SquareIsingModel.h
src/src/MonteCarlo/Spin2d/: Spin2DModel.h  SquareXYModel.cpp  SquareXYModel.h
src/src/QRPM/: CircuitUtils.cpp  Clifford.hpp  CliffordState.cpp  CliffordState.h  Instructions.cpp  Instructions.hpp  PauliString.cpp  PauliString.hpp  QuantumCHPState.cpp  QuantumCHPState.h  QuantumCircuit.cpp  QuantumCircuit.h  QuantumStates.cpp  QuantumStates.h  RandomCliffordSimulator.hpp  SandpileCliffordSimulator.cpp  SandpileCliffordSimulator.h  Tableau.cpp  Tableau.h  TableauSIMD.cpp  TableauSIMD.h
